--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ title: Gabriel Oliveira
 # Your name to show in the footer
 author: Gabriel Oliveira
 
+description: "Software Engineer Portfolio. Backend specialist in Java, .NET, Distributed Systems and High-Performance Architectures."
+
+url: "https://zgabrieloliveira.github.io"
+
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
@@ -120,7 +124,7 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+edit_page_button: false
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
@@ -277,7 +281,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
+      comments: false
       social-share: true # add social media sharing buttons to all blog posts
   -
     scope:
